feat: change img url

--- a/source/_posts/2009-10-31-a-detail.md
+++ b/source/_posts/2009-10-31-a-detail.md
@@ -14,7 +14,7 @@ meta:
   _wp_old_slug: ! '%e5%8f%91%e4%b8%80%e4%b8%aa%e4%ba%a4%e4%ba%92%e7%bb%86%e8%8a%82%ef%bc%8c%e5%9b%a0%e4%b8%ba%e6%b2%a1%e7%9c%8b%e5%88%b0%e8%bf%87'
   dsq_thread_id: '404520741'
 ---
-<img class="alignnone size-full wp-image-107" title="InteractionDesign2" src="http://www.yeahxj.com/wp-content/uploads/InteractionDesign2.jpg" alt="InteractionDesign2" width="600" height="458" />
+<img class="alignnone size-full wp-image-107" title="InteractionDesign2" src="/wp-content/uploads/InteractionDesign2.jpg" alt="InteractionDesign2" width="600" height="458" />
 
 没有保存的关闭需要确认吗？哦，是的，的确是需要确认的。但是这个确认框为什么总是在屏幕的最中间弹出呢，我的鼠标在叉叉那儿，要是这个不可缺少的确认框能在叉叉的边上那就爽多了，，，其实我们很不想鼠标移来移去。
 
