--- a/source/_posts/2009-12-07-font-face.md
+++ b/source/_posts/2009-12-07-font-face.md
@@ -12,7 +12,7 @@ meta:
   _edit_last: '1'
   edg_digg_count: '1'
 ---
-<a href="http://www.yeahxj.com/wp-content/uploads/@font-face.jpg"><img class="size-medium wp-image-123" title="@font-face" src="http://www.yeahxj.com/wp-content/uploads/@font-face-300x193.jpg" alt="@font-face" width="300" height="193" /></a>
+<a href="/wp-content/uploads/@font-face.jpg"><img class="size-medium wp-image-123" title="@font-face" src="/wp-content/uploads/@font-face-300x193.jpg" alt="@font-face" width="300" height="193" /></a>
 
 <strong><span>语法：</span></strong>
 <strong>@font-face { font-family : </strong><em>name  ;</em><strong> src : url( </strong><em>url</em><strong> ) </strong><em>; sRules </em><strong>}</strong>
