--- a/source/_posts/2010-02-26-mother.md
+++ b/source/_posts/2010-02-26-mother.md
@@ -13,7 +13,7 @@ meta:
   edg_digg_count: '1'
   dsq_thread_id: '404520947'
 ---
-<a href="http://www.yeahxj.com/wp-content/uploads/mother.jpg"><img class="size-full wp-image-225" title="mother" src="http://www.yeahxj.com/wp-content/uploads/mother.jpg" alt="mother" width="500" height="717" /></a>
+<a href="/wp-content/uploads/mother.jpg"><img class="size-full wp-image-225" title="mother" src="/wp-content/uploads/mother.jpg" alt="mother" width="500" height="717" /></a>
 
 奉俊昊的第三部我所知道的作品-《母亲》。这是一部有关伦理的故事，从一开始在韩寒的博客上看到这本电影，然后在从这本电影的影评中知道这才才俊的第一本作品《杀人回忆》。
 
