--- a/source/_posts/2010-03-03-godaddy.md
+++ b/source/_posts/2010-03-03-godaddy.md
@@ -13,7 +13,7 @@ meta:
   edg_digg_count: '0'
   dsq_thread_id: '404520982'
 ---
-<a href="http://www.yeahxj.com/wp-content/uploads/candice-michelle-go-daddy.jpg"><img class="alignnone size-full wp-image-243" title="candice-michelle-go-daddy" src="http://www.yeahxj.com/wp-content/uploads/candice-michelle-go-daddy.jpg" alt="" width="376" height="490" /></a>
+<a href="/wp-content/uploads/candice-michelle-go-daddy.jpg"><img class="alignnone size-full wp-image-243" title="candice-michelle-go-daddy" src="/wp-content/uploads/candice-michelle-go-daddy.jpg" alt="" width="376" height="490" /></a>
 
 Godaddy是世界第一大域名注册商,昨天终于让我进去了...
 
