--- a/source/_posts/2010-04-24-coder.md
+++ b/source/_posts/2010-04-24-coder.md
@@ -13,12 +13,12 @@ meta:
   edg_digg_count: '1'
   dsq_thread_id: '404521112'
 ---
-<a href="http://www.yeahxj.com/wp-content/uploads/vs.png"><img src="http://www.yeahxj.com/wp-content/uploads/vs.png" alt="" title="vs" width="557" height="376" /></a>
+<a href="/wp-content/uploads/vs.png"><img src="/wp-content/uploads/vs.png" alt="" title="vs" width="557" height="376" /></a>
 
 一位热衷于编程的程序员，一位爱上了程序员的女孩，他们的故事.
 最后一集一开始美女就说：“妈妈说你什么都好，就不该是个程序员”，看来做开发的同学都要肉牛满面了……
 
-<a href="http://www.yeahxj.com/wp-content/uploads/vs-you.jpg"><img src="http://www.yeahxj.com/wp-content/uploads/vs-you.jpg" alt="" title="vs-you" width="640" height="400" /></a>
+<a href="/wp-content/uploads/vs-you.jpg"><img src="/wp-content/uploads/vs-you.jpg" alt="" title="vs-you" width="640" height="400" /></a>
 
 <strong>微软程序员YY广告全集回顾：</strong>
 
