--- a/source/_posts/2010-08-07-blog-move.md
+++ b/source/_posts/2010-08-07-blog-move.md
@@ -12,7 +12,7 @@ meta:
   _edit_last: '1'
   dsq_thread_id: '404521187'
 ---
-<a href="http://www.yeahxj.com/wp-content/uploads/made-in-china.jpg"><img src="http://www.yeahxj.com/wp-content/uploads/made-in-china.jpg" alt="made-in-china" title="made-in-china" width="600" height="221" class="size-full wp-image-317" /></a>
+<a href="/wp-content/uploads/made-in-china.jpg"><img src="/wp-content/uploads/made-in-china.jpg" alt="made-in-china" title="made-in-china" width="600" height="221" class="size-full wp-image-317" /></a>
 这可能是很简单的活儿，大师们肯定很不屑，但因为之前一直没干过，我想第一次，无论怎样，总是值得纪念的。
 
 最早是从windows的主机迁移到Linux的，没其他的办法，只有FTP。
